# base-life

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  config.toml.example  dev-requirements.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
base_life/: cli.py  scraper.py
docs/: START.md  STYLE.md
tests/: conftest.py  test_main.py  test_scraper_async.py  test_scraper_pure.py
tests/fixtures/: detail_1.html  detail_2.html  detail_contains.html  list_page.html
