[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "base-life"
version = "0.1.0"
description = "Simple news scraper that reads config.toml and outputs structured NewsItem objects"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9,<4",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<7",
]

[project.scripts]
base-life = "base_life.cli:main"

[dependency-groups]
dev = [
    "black>=24.0",
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.pytest]
asyncio_mode = "auto"